fixed the hire me button breaking on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,12 +57,6 @@ main{
 }
 .btn-primary:hover{
     background-color: #fd9850;
-    border: 1px solid #fd6e0a;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    padding: 18px 36px;
 }
 .btn-secondary{
     background-color: rgba(0, 0, 0, 0);
@@ -75,12 +69,6 @@ main{
 }
 .btn-secondary:hover{
     background-color: rgba(255, 180, 109, 0.162);
-    border: 1px solid #fd6e0a;
-    border-radius: 5px;
-    color: #fd6e0a;
-    font-weight: bold;
-    font-size: 20px;
-    padding: 18px 36px;
 }
 
 /* header */
@@ -101,7 +89,7 @@ nav{
 }
 nav ul{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 }
 nav ul li{
     list-style: none;
@@ -116,6 +104,11 @@ nav li a{
 .nav-title{
     font-weight: 800;
     font-size: 45px;
+}
+.nav-btns{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 /* banner styling */
@@ -270,12 +263,17 @@ nav li a{
 
     /* header */
     nav{
-        scale: 0.8;
-        margin: 0 0 20px;
+        scale: 1;
+        /* width: 100%; */
+        padding: 0;
+        margin: 0 20px 50px 0px;
         flex-wrap: wrap;
     }
     nav li{
         margin: 0 0;
+    }
+    nav .btn-primary{
+        padding: 15px;
     }
     .banner{
         flex-direction: column;
